// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User Roles can be created/edited/deleted: can be created 1`] = `
{
  "data": {
    "createUserRole": {
      "description": "New Role",
      "id": Any<String>,
      "name": Any<String>,
      "permissions": [
        {
          "deprecated": false,
          "description": "Allows to take an action on comment",
          "id": "CAN_TAKE_COMMENT_ACTION",
        },
        {
          "deprecated": false,
          "description": "Allows to create navigation",
          "id": "CAN_CREATE_NAVIGATION",
        },
        {
          "deprecated": false,
          "description": "Allows to get navigation",
          "id": "CAN_GET_NAVIGATION",
        },
        {
          "deprecated": false,
          "description": "Allows to get all navigations",
          "id": "CAN_GET_NAVIGATIONS",
        },
        {
          "deprecated": false,
          "description": "Allows to delete navigations",
          "id": "CAN_DELETE_NAVIGATION",
        },
        {
          "deprecated": false,
          "description": "Allows to create authors",
          "id": "CAN_CREATE_AUTHOR",
        },
        {
          "deprecated": false,
          "description": "Allows to get author",
          "id": "CAN_GET_AUTHOR",
        },
        {
          "deprecated": false,
          "description": "Allows to all authors",
          "id": "CAN_GET_AUTHORS",
        },
        {
          "deprecated": false,
          "description": "Allows to delete authors",
          "id": "CAN_DELETE_AUTHORS",
        },
        {
          "deprecated": false,
          "description": "Allows to create images",
          "id": "CAN_CREATE_IMAGE",
        },
        {
          "deprecated": false,
          "description": "Allows to get image",
          "id": "CAN_GET_IMAGE",
        },
        {
          "deprecated": false,
          "description": "Allows to get all images",
          "id": "CAN_GET_IMAGES",
        },
        {
          "deprecated": false,
          "description": "Allows to delete images",
          "id": "CAN_DELETE_IMAGE",
        },
        {
          "deprecated": false,
          "description": "Allows to create articles",
          "id": "CAN_CREATE_ARTICLE",
        },
        {
          "deprecated": false,
          "description": "Allows to get article",
          "id": "CAN_GET_ARTICLE",
        },
        {
          "deprecated": false,
          "description": "Allows to get all articles",
          "id": "CAN_GET_ARTICLES",
        },
        {
          "deprecated": false,
          "description": "Allows to delete articles",
          "id": "CAN_DELETE_ARTICLE",
        },
        {
          "deprecated": false,
          "description": "Allows to get preview links for articles",
          "id": "CAN_GET_ARTICLE_PREVIEW_LINK",
        },
        {
          "deprecated": false,
          "description": "Allows to publish articles",
          "id": "CAN_PUBLISH_ARTICLE",
        },
        {
          "deprecated": false,
          "description": "Allows to get peer article",
          "id": "CAN_GET_PEER_ARTICLE",
        },
        {
          "deprecated": false,
          "description": "Allows to get all peer articles",
          "id": "CAN_GET_PEER_ARTICLES",
        },
        {
          "deprecated": false,
          "description": "Allows to create Pages",
          "id": "CAN_CREATE_PAGE",
        },
        {
          "deprecated": false,
          "description": "Allows to get Page",
          "id": "CAN_GET_PAGE",
        },
        {
          "deprecated": false,
          "description": "Allows to get all Pages",
          "id": "CAN_GET_PAGES",
        },
        {
          "deprecated": false,
          "description": "Allows to delete Pages",
          "id": "CAN_DELETE_PAGE",
        },
        {
          "deprecated": false,
          "description": "Allows to publish Pages",
          "id": "CAN_PUBLISH_PAGE",
        },
        {
          "deprecated": false,
          "description": "Allows to get preview links for pages",
          "id": "CAN_GET_PAGE_PREVIEW_LINK",
        },
        {
          "deprecated": false,
          "description": "Allows to update peer profile",
          "id": "CAN_UPDATE_PEER_PROFILE",
        },
        {
          "deprecated": false,
          "description": "Allows to get peer profile",
          "id": "CAN_GET_PEER_PROFILE",
        },
        {
          "deprecated": false,
          "description": "Allows to create peers",
          "id": "CAN_CREATE_PEER",
        },
        {
          "deprecated": false,
          "description": "Allows to get peer",
          "id": "CAN_GET_PEER",
        },
        {
          "deprecated": false,
          "description": "Allows to get all peers",
          "id": "CAN_GET_PEERS",
        },
        {
          "deprecated": false,
          "description": "Allows to delete peers",
          "id": "CAN_DELETE_PEER",
        },
        {
          "deprecated": false,
          "description": "Allows to create tokens",
          "id": "CAN_CREATE_TOKEN",
        },
        {
          "deprecated": false,
          "description": "Allows to delete tokens",
          "id": "CAN_DELETE_TOKEN",
        },
        {
          "deprecated": false,
          "description": "Allows to get all tokens",
          "id": "CAN_GET_TOKENS",
        },
        {
          "deprecated": false,
          "description": "Allows to create an user",
          "id": "CAN_CREATE_USER",
        },
        {
          "deprecated": false,
          "description": "Allows to reset the password of an user",
          "id": "CAN_RESET_USER_PASSWORD",
        },
        {
          "deprecated": false,
          "description": "Allows to get an user",
          "id": "CAN_GET_USER",
        },
        {
          "deprecated": false,
          "description": "Allows to get all users",
          "id": "CAN_GET_USERS",
        },
        {
          "deprecated": false,
          "description": "Allows to delete users",
          "id": "CAN_DELETE_USER",
        },
        {
          "deprecated": false,
          "description": "Allows to create an user role",
          "id": "CAN_CREATE_USER_ROLE",
        },
        {
          "deprecated": false,
          "description": "Allows to get an user role",
          "id": "CAN_GET_USER_ROLE",
        },
        {
          "deprecated": false,
          "description": "Allows to get all user roles",
          "id": "CAN_GET_USER_ROLES",
        },
        {
          "deprecated": false,
          "description": "Allows to delete user role",
          "id": "CAN_DELETE_USER_ROLE",
        },
        {
          "deprecated": false,
          "description": "Allows to get a permission",
          "id": "CAN_GET_PERMISSION",
        },
        {
          "deprecated": false,
          "description": "Allows to get all permissions",
          "id": "CAN_GET_PERMISSIONS",
        },
        {
          "deprecated": false,
          "description": "Allows to get all comments",
          "id": "CAN_GET_COMMENTS",
        },
        {
          "deprecated": false,
          "description": "Allows to update a comment",
          "id": "CAN_UPDATE_COMMENTS",
        },
        {
          "deprecated": false,
          "description": "Allows to delete comments",
          "id": "CAN_DELETE_COMMENTS",
        },
        {
          "deprecated": false,
          "description": "Allows to create a member plan",
          "id": "CAN_CREATE_MEMBER_PLAN",
        },
        {
          "deprecated": false,
          "description": "Allows to get a member plan",
          "id": "CAN_GET_MEMBER_PLAN",
        },
        {
          "deprecated": false,
          "description": "Allows to get all member plans",
          "id": "CAN_GET_MEMBER_PLANS",
        },
        {
          "deprecated": false,
          "description": "Allows to delete member plan",
          "id": "CAN_DELETE_MEMBER_PLAN",
        },
        {
          "deprecated": false,
          "description": "Allows to create a payment method",
          "id": "CAN_CREATE_PAYMENT_METHOD",
        },
        {
          "deprecated": false,
          "description": "Allows to get a payment method",
          "id": "CAN_GET_PAYMENT_METHOD",
        },
        {
          "deprecated": false,
          "description": "Allows to get all payment methods",
          "id": "CAN_GET_PAYMENT_METHODS",
        },
        {
          "deprecated": false,
          "description": "Allows to delete payment method",
          "id": "CAN_DELETE_PAYMENT_METHOD",
        },
        {
          "deprecated": false,
          "description": "Allows to create an invoice",
          "id": "CAN_CREATE_INVOICE",
        },
        {
          "deprecated": false,
          "description": "Allows to get an invoice",
          "id": "CAN_GET_INVOICE",
        },
        {
          "deprecated": false,
          "description": "Allows to get all invoices",
          "id": "CAN_GET_INVOICES",
        },
        {
          "deprecated": false,
          "description": "Allows to delete invoice",
          "id": "CAN_DELETE_INVOICE",
        },
        {
          "deprecated": false,
          "description": "Allows to create a payment",
          "id": "CAN_CREATE_PAYMENT",
        },
        {
          "deprecated": false,
          "description": "Allows to get an payment",
          "id": "CAN_GET_PAYMENT",
        },
        {
          "deprecated": false,
          "description": "Allows to get all payments",
          "id": "CAN_GET_PAYMENTS",
        },
        {
          "deprecated": false,
          "description": "Allows to get all payment providers",
          "id": "CAN_GET_PAYMENT_PROVIDERS",
        },
        {
          "deprecated": false,
          "description": "Allows to send a JWT Login",
          "id": "CAN_SEND_JWT_LOGIN",
        },
        {
          "deprecated": false,
          "description": "Allows to login editor",
          "id": "CAN_LOGIN_EDITOR",
        },
        {
          "deprecated": false,
          "description": "Allows to create a subscription",
          "id": "CAN_CREATE_SUBSCRIPTION",
        },
        {
          "deprecated": false,
          "description": "Allows to get a subscription",
          "id": "CAN_GET_SUBSCRIPTION",
        },
        {
          "deprecated": false,
          "description": "Allows to get all subscriptions",
          "id": "CAN_GET_SUBSCRIPTIONS",
        },
        {
          "deprecated": false,
          "description": "Allows to delete a subscription",
          "id": "CAN_DELETE_SUBSCRIPTION",
        },
        {
          "deprecated": false,
          "description": "Allows to login as other user",
          "id": "CAN_LOGIN_AS_OTHER_USER",
        },
        {
          "deprecated": false,
          "description": "Allows to get all settings",
          "id": "CAN_GET_SETTINGS",
        },
        {
          "deprecated": false,
          "description": "Allows to update settings",
          "id": "CAN_UPDATE_SETTINGS",
        },
        {
          "deprecated": false,
          "description": "Allows to get a comment rating system",
          "id": "CAN_GET_COMMENT_RATING_SYSTEM",
        },
        {
          "deprecated": false,
          "description": "Allows to create a comment rating system",
          "id": "CAN_CREATE_COMMENT_RATING_SYSTEM",
        },
        {
          "deprecated": false,
          "description": "Allows to update a comment rating system",
          "id": "CAN_UPDATE_COMMENT_RATING_SYSTEM",
        },
        {
          "deprecated": false,
          "description": "Allows to delete a comment rating system",
          "id": "CAN_DELETE_COMMENT_RATING_SYSTEM",
        },
        {
          "deprecated": false,
          "description": "Allows to create a tag",
          "id": "CAN_CREATE_TAG",
        },
        {
          "deprecated": false,
          "description": "Allows to update a tag",
          "id": "CAN_UPDATE_TAG",
        },
        {
          "deprecated": false,
          "description": "Allows to get all tags",
          "id": "CAN_GET_TAGS",
        },
        {
          "deprecated": false,
          "description": "Allows to delete a tag",
          "id": "CAN_DELETE_TAG",
        },
        {
          "deprecated": false,
          "description": "Allows to get a poll",
          "id": "CAN_GET_POLL",
        },
        {
          "deprecated": false,
          "description": "Allows to update a poll",
          "id": "CAN_UPDATE_POLL",
        },
        {
          "deprecated": false,
          "description": "Allows to delete a poll",
          "id": "CAN_DELETE_POLL",
        },
        {
          "deprecated": false,
          "description": "Allows to create a poll",
          "id": "CAN_CREATE_POLL",
        },
        {
          "deprecated": false,
          "description": "Allows to get an event",
          "id": "CAN_GET_EVENT",
        },
        {
          "deprecated": false,
          "description": "Allows to update an event",
          "id": "CAN_UPDATE_EVENT",
        },
        {
          "deprecated": false,
          "description": "Allows to delete an event",
          "id": "CAN_DELETE_EVENT",
        },
        {
          "deprecated": false,
          "description": "Allows to create an event",
          "id": "CAN_CREATE_EVENT",
        },
        {
          "deprecated": false,
          "description": "Allows to create a consent",
          "id": "CAN_CREATE_CONSENT",
        },
        {
          "deprecated": false,
          "description": "Allows to update a consent",
          "id": "CAN_UPDATE_CONSENT",
        },
        {
          "deprecated": false,
          "description": "Allows to delete a consent",
          "id": "CAN_DELETE_CONSENT",
        },
      ],
      "systemRole": false,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`User Roles can be created/edited/deleted: can be deleted 1`] = `
{
  "data": {
    "deleteUserRole": Any<Object>,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`User Roles can be created/edited/deleted: can be read by id 1`] = `
{
  "data": {
    "userRole": {
      "description": "New Role",
      "id": Any<String>,
      "name": Any<String>,
      "permissions": [
        {
          "deprecated": false,
          "description": "Allows to take an action on comment",
          "id": "CAN_TAKE_COMMENT_ACTION",
        },
        {
          "deprecated": false,
          "description": "Allows to create navigation",
          "id": "CAN_CREATE_NAVIGATION",
        },
        {
          "deprecated": false,
          "description": "Allows to get navigation",
          "id": "CAN_GET_NAVIGATION",
        },
        {
          "deprecated": false,
          "description": "Allows to get all navigations",
          "id": "CAN_GET_NAVIGATIONS",
        },
        {
          "deprecated": false,
          "description": "Allows to delete navigations",
          "id": "CAN_DELETE_NAVIGATION",
        },
        {
          "deprecated": false,
          "description": "Allows to create authors",
          "id": "CAN_CREATE_AUTHOR",
        },
        {
          "deprecated": false,
          "description": "Allows to get author",
          "id": "CAN_GET_AUTHOR",
        },
        {
          "deprecated": false,
          "description": "Allows to all authors",
          "id": "CAN_GET_AUTHORS",
        },
        {
          "deprecated": false,
          "description": "Allows to delete authors",
          "id": "CAN_DELETE_AUTHORS",
        },
        {
          "deprecated": false,
          "description": "Allows to create images",
          "id": "CAN_CREATE_IMAGE",
        },
        {
          "deprecated": false,
          "description": "Allows to get image",
          "id": "CAN_GET_IMAGE",
        },
        {
          "deprecated": false,
          "description": "Allows to get all images",
          "id": "CAN_GET_IMAGES",
        },
        {
          "deprecated": false,
          "description": "Allows to delete images",
          "id": "CAN_DELETE_IMAGE",
        },
        {
          "deprecated": false,
          "description": "Allows to create articles",
          "id": "CAN_CREATE_ARTICLE",
        },
        {
          "deprecated": false,
          "description": "Allows to get article",
          "id": "CAN_GET_ARTICLE",
        },
        {
          "deprecated": false,
          "description": "Allows to get all articles",
          "id": "CAN_GET_ARTICLES",
        },
        {
          "deprecated": false,
          "description": "Allows to delete articles",
          "id": "CAN_DELETE_ARTICLE",
        },
        {
          "deprecated": false,
          "description": "Allows to get preview links for articles",
          "id": "CAN_GET_ARTICLE_PREVIEW_LINK",
        },
        {
          "deprecated": false,
          "description": "Allows to publish articles",
          "id": "CAN_PUBLISH_ARTICLE",
        },
        {
          "deprecated": false,
          "description": "Allows to get peer article",
          "id": "CAN_GET_PEER_ARTICLE",
        },
        {
          "deprecated": false,
          "description": "Allows to get all peer articles",
          "id": "CAN_GET_PEER_ARTICLES",
        },
        {
          "deprecated": false,
          "description": "Allows to create Pages",
          "id": "CAN_CREATE_PAGE",
        },
        {
          "deprecated": false,
          "description": "Allows to get Page",
          "id": "CAN_GET_PAGE",
        },
        {
          "deprecated": false,
          "description": "Allows to get all Pages",
          "id": "CAN_GET_PAGES",
        },
        {
          "deprecated": false,
          "description": "Allows to delete Pages",
          "id": "CAN_DELETE_PAGE",
        },
        {
          "deprecated": false,
          "description": "Allows to publish Pages",
          "id": "CAN_PUBLISH_PAGE",
        },
        {
          "deprecated": false,
          "description": "Allows to get preview links for pages",
          "id": "CAN_GET_PAGE_PREVIEW_LINK",
        },
        {
          "deprecated": false,
          "description": "Allows to update peer profile",
          "id": "CAN_UPDATE_PEER_PROFILE",
        },
        {
          "deprecated": false,
          "description": "Allows to get peer profile",
          "id": "CAN_GET_PEER_PROFILE",
        },
        {
          "deprecated": false,
          "description": "Allows to create peers",
          "id": "CAN_CREATE_PEER",
        },
        {
          "deprecated": false,
          "description": "Allows to get peer",
          "id": "CAN_GET_PEER",
        },
        {
          "deprecated": false,
          "description": "Allows to get all peers",
          "id": "CAN_GET_PEERS",
        },
        {
          "deprecated": false,
          "description": "Allows to delete peers",
          "id": "CAN_DELETE_PEER",
        },
        {
          "deprecated": false,
          "description": "Allows to create tokens",
          "id": "CAN_CREATE_TOKEN",
        },
        {
          "deprecated": false,
          "description": "Allows to delete tokens",
          "id": "CAN_DELETE_TOKEN",
        },
        {
          "deprecated": false,
          "description": "Allows to get all tokens",
          "id": "CAN_GET_TOKENS",
        },
        {
          "deprecated": false,
          "description": "Allows to create an user",
          "id": "CAN_CREATE_USER",
        },
        {
          "deprecated": false,
          "description": "Allows to reset the password of an user",
          "id": "CAN_RESET_USER_PASSWORD",
        },
        {
          "deprecated": false,
          "description": "Allows to get an user",
          "id": "CAN_GET_USER",
        },
        {
          "deprecated": false,
          "description": "Allows to get all users",
          "id": "CAN_GET_USERS",
        },
        {
          "deprecated": false,
          "description": "Allows to delete users",
          "id": "CAN_DELETE_USER",
        },
        {
          "deprecated": false,
          "description": "Allows to create an user role",
          "id": "CAN_CREATE_USER_ROLE",
        },
        {
          "deprecated": false,
          "description": "Allows to get an user role",
          "id": "CAN_GET_USER_ROLE",
        },
        {
          "deprecated": false,
          "description": "Allows to get all user roles",
          "id": "CAN_GET_USER_ROLES",
        },
        {
          "deprecated": false,
          "description": "Allows to delete user role",
          "id": "CAN_DELETE_USER_ROLE",
        },
        {
          "deprecated": false,
          "description": "Allows to get a permission",
          "id": "CAN_GET_PERMISSION",
        },
        {
          "deprecated": false,
          "description": "Allows to get all permissions",
          "id": "CAN_GET_PERMISSIONS",
        },
        {
          "deprecated": false,
          "description": "Allows to get all comments",
          "id": "CAN_GET_COMMENTS",
        },
        {
          "deprecated": false,
          "description": "Allows to update a comment",
          "id": "CAN_UPDATE_COMMENTS",
        },
        {
          "deprecated": false,
          "description": "Allows to delete comments",
          "id": "CAN_DELETE_COMMENTS",
        },
        {
          "deprecated": false,
          "description": "Allows to create a member plan",
          "id": "CAN_CREATE_MEMBER_PLAN",
        },
        {
          "deprecated": false,
          "description": "Allows to get a member plan",
          "id": "CAN_GET_MEMBER_PLAN",
        },
        {
          "deprecated": false,
          "description": "Allows to get all member plans",
          "id": "CAN_GET_MEMBER_PLANS",
        },
        {
          "deprecated": false,
          "description": "Allows to delete member plan",
          "id": "CAN_DELETE_MEMBER_PLAN",
        },
        {
          "deprecated": false,
          "description": "Allows to create a payment method",
          "id": "CAN_CREATE_PAYMENT_METHOD",
        },
        {
          "deprecated": false,
          "description": "Allows to get a payment method",
          "id": "CAN_GET_PAYMENT_METHOD",
        },
        {
          "deprecated": false,
          "description": "Allows to get all payment methods",
          "id": "CAN_GET_PAYMENT_METHODS",
        },
        {
          "deprecated": false,
          "description": "Allows to delete payment method",
          "id": "CAN_DELETE_PAYMENT_METHOD",
        },
        {
          "deprecated": false,
          "description": "Allows to create an invoice",
          "id": "CAN_CREATE_INVOICE",
        },
        {
          "deprecated": false,
          "description": "Allows to get an invoice",
          "id": "CAN_GET_INVOICE",
        },
        {
          "deprecated": false,
          "description": "Allows to get all invoices",
          "id": "CAN_GET_INVOICES",
        },
        {
          "deprecated": false,
          "description": "Allows to delete invoice",
          "id": "CAN_DELETE_INVOICE",
        },
        {
          "deprecated": false,
          "description": "Allows to create a payment",
          "id": "CAN_CREATE_PAYMENT",
        },
        {
          "deprecated": false,
          "description": "Allows to get an payment",
          "id": "CAN_GET_PAYMENT",
        },
        {
          "deprecated": false,
          "description": "Allows to get all payments",
          "id": "CAN_GET_PAYMENTS",
        },
        {
          "deprecated": false,
          "description": "Allows to get all payment providers",
          "id": "CAN_GET_PAYMENT_PROVIDERS",
        },
        {
          "deprecated": false,
          "description": "Allows to send a JWT Login",
          "id": "CAN_SEND_JWT_LOGIN",
        },
        {
          "deprecated": false,
          "description": "Allows to login editor",
          "id": "CAN_LOGIN_EDITOR",
        },
        {
          "deprecated": false,
          "description": "Allows to create a subscription",
          "id": "CAN_CREATE_SUBSCRIPTION",
        },
        {
          "deprecated": false,
          "description": "Allows to get a subscription",
          "id": "CAN_GET_SUBSCRIPTION",
        },
        {
          "deprecated": false,
          "description": "Allows to get all subscriptions",
          "id": "CAN_GET_SUBSCRIPTIONS",
        },
        {
          "deprecated": false,
          "description": "Allows to delete a subscription",
          "id": "CAN_DELETE_SUBSCRIPTION",
        },
        {
          "deprecated": false,
          "description": "Allows to login as other user",
          "id": "CAN_LOGIN_AS_OTHER_USER",
        },
        {
          "deprecated": false,
          "description": "Allows to get all settings",
          "id": "CAN_GET_SETTINGS",
        },
        {
          "deprecated": false,
          "description": "Allows to update settings",
          "id": "CAN_UPDATE_SETTINGS",
        },
        {
          "deprecated": false,
          "description": "Allows to get a comment rating system",
          "id": "CAN_GET_COMMENT_RATING_SYSTEM",
        },
        {
          "deprecated": false,
          "description": "Allows to create a comment rating system",
          "id": "CAN_CREATE_COMMENT_RATING_SYSTEM",
        },
        {
          "deprecated": false,
          "description": "Allows to update a comment rating system",
          "id": "CAN_UPDATE_COMMENT_RATING_SYSTEM",
        },
        {
          "deprecated": false,
          "description": "Allows to delete a comment rating system",
          "id": "CAN_DELETE_COMMENT_RATING_SYSTEM",
        },
        {
          "deprecated": false,
          "description": "Allows to create a tag",
          "id": "CAN_CREATE_TAG",
        },
        {
          "deprecated": false,
          "description": "Allows to update a tag",
          "id": "CAN_UPDATE_TAG",
        },
        {
          "deprecated": false,
          "description": "Allows to get all tags",
          "id": "CAN_GET_TAGS",
        },
        {
          "deprecated": false,
          "description": "Allows to delete a tag",
          "id": "CAN_DELETE_TAG",
        },
        {
          "deprecated": false,
          "description": "Allows to get a poll",
          "id": "CAN_GET_POLL",
        },
        {
          "deprecated": false,
          "description": "Allows to update a poll",
          "id": "CAN_UPDATE_POLL",
        },
        {
          "deprecated": false,
          "description": "Allows to delete a poll",
          "id": "CAN_DELETE_POLL",
        },
        {
          "deprecated": false,
          "description": "Allows to create a poll",
          "id": "CAN_CREATE_POLL",
        },
        {
          "deprecated": false,
          "description": "Allows to get an event",
          "id": "CAN_GET_EVENT",
        },
        {
          "deprecated": false,
          "description": "Allows to update an event",
          "id": "CAN_UPDATE_EVENT",
        },
        {
          "deprecated": false,
          "description": "Allows to delete an event",
          "id": "CAN_DELETE_EVENT",
        },
        {
          "deprecated": false,
          "description": "Allows to create an event",
          "id": "CAN_CREATE_EVENT",
        },
        {
          "deprecated": false,
          "description": "Allows to create a consent",
          "id": "CAN_CREATE_CONSENT",
        },
        {
          "deprecated": false,
          "description": "Allows to update a consent",
          "id": "CAN_UPDATE_CONSENT",
        },
        {
          "deprecated": false,
          "description": "Allows to delete a consent",
          "id": "CAN_DELETE_CONSENT",
        },
      ],
      "systemRole": false,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`User Roles can be created/edited/deleted: can be updated 1`] = `
{
  "data": {
    "updateUserRole": {
      "description": "Updated Role",
      "id": Any<String>,
      "name": Any<String>,
      "permissions": [
        {
          "deprecated": false,
          "description": "Allows to take an action on comment",
          "id": "CAN_TAKE_COMMENT_ACTION",
        },
        {
          "deprecated": false,
          "description": "Allows to get all navigations",
          "id": "CAN_GET_NAVIGATIONS",
        },
      ],
      "systemRole": false,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`User Roles can be created/edited/deleted: can read permission list 1`] = `
{
  "data": {
    "permissions": [
      {
        "deprecated": false,
        "description": "Allows to take an action on comment",
        "id": "CAN_TAKE_COMMENT_ACTION",
      },
      {
        "deprecated": false,
        "description": "Allows to create navigation",
        "id": "CAN_CREATE_NAVIGATION",
      },
      {
        "deprecated": false,
        "description": "Allows to get navigation",
        "id": "CAN_GET_NAVIGATION",
      },
      {
        "deprecated": false,
        "description": "Allows to get all navigations",
        "id": "CAN_GET_NAVIGATIONS",
      },
      {
        "deprecated": false,
        "description": "Allows to delete navigations",
        "id": "CAN_DELETE_NAVIGATION",
      },
      {
        "deprecated": false,
        "description": "Allows to create authors",
        "id": "CAN_CREATE_AUTHOR",
      },
      {
        "deprecated": false,
        "description": "Allows to get author",
        "id": "CAN_GET_AUTHOR",
      },
      {
        "deprecated": false,
        "description": "Allows to all authors",
        "id": "CAN_GET_AUTHORS",
      },
      {
        "deprecated": false,
        "description": "Allows to delete authors",
        "id": "CAN_DELETE_AUTHORS",
      },
      {
        "deprecated": false,
        "description": "Allows to create images",
        "id": "CAN_CREATE_IMAGE",
      },
      {
        "deprecated": false,
        "description": "Allows to get image",
        "id": "CAN_GET_IMAGE",
      },
      {
        "deprecated": false,
        "description": "Allows to get all images",
        "id": "CAN_GET_IMAGES",
      },
      {
        "deprecated": false,
        "description": "Allows to delete images",
        "id": "CAN_DELETE_IMAGE",
      },
      {
        "deprecated": false,
        "description": "Allows to create articles",
        "id": "CAN_CREATE_ARTICLE",
      },
      {
        "deprecated": false,
        "description": "Allows to get article",
        "id": "CAN_GET_ARTICLE",
      },
      {
        "deprecated": false,
        "description": "Allows to get all articles",
        "id": "CAN_GET_ARTICLES",
      },
      {
        "deprecated": false,
        "description": "Allows to delete articles",
        "id": "CAN_DELETE_ARTICLE",
      },
      {
        "deprecated": false,
        "description": "Allows to get preview links for articles",
        "id": "CAN_GET_ARTICLE_PREVIEW_LINK",
      },
      {
        "deprecated": false,
        "description": "Allows to publish articles",
        "id": "CAN_PUBLISH_ARTICLE",
      },
      {
        "deprecated": false,
        "description": "Allows to get peer article",
        "id": "CAN_GET_PEER_ARTICLE",
      },
      {
        "deprecated": false,
        "description": "Allows to get all peer articles",
        "id": "CAN_GET_PEER_ARTICLES",
      },
      {
        "deprecated": false,
        "description": "Allows to create Pages",
        "id": "CAN_CREATE_PAGE",
      },
      {
        "deprecated": false,
        "description": "Allows to get Page",
        "id": "CAN_GET_PAGE",
      },
      {
        "deprecated": false,
        "description": "Allows to get all Pages",
        "id": "CAN_GET_PAGES",
      },
      {
        "deprecated": false,
        "description": "Allows to delete Pages",
        "id": "CAN_DELETE_PAGE",
      },
      {
        "deprecated": false,
        "description": "Allows to publish Pages",
        "id": "CAN_PUBLISH_PAGE",
      },
      {
        "deprecated": false,
        "description": "Allows to get preview links for pages",
        "id": "CAN_GET_PAGE_PREVIEW_LINK",
      },
      {
        "deprecated": false,
        "description": "Allows to update peer profile",
        "id": "CAN_UPDATE_PEER_PROFILE",
      },
      {
        "deprecated": false,
        "description": "Allows to get peer profile",
        "id": "CAN_GET_PEER_PROFILE",
      },
      {
        "deprecated": false,
        "description": "Allows to create peers",
        "id": "CAN_CREATE_PEER",
      },
      {
        "deprecated": false,
        "description": "Allows to get peer",
        "id": "CAN_GET_PEER",
      },
      {
        "deprecated": false,
        "description": "Allows to get all peers",
        "id": "CAN_GET_PEERS",
      },
      {
        "deprecated": false,
        "description": "Allows to delete peers",
        "id": "CAN_DELETE_PEER",
      },
      {
        "deprecated": false,
        "description": "Allows to create tokens",
        "id": "CAN_CREATE_TOKEN",
      },
      {
        "deprecated": false,
        "description": "Allows to delete tokens",
        "id": "CAN_DELETE_TOKEN",
      },
      {
        "deprecated": false,
        "description": "Allows to get all tokens",
        "id": "CAN_GET_TOKENS",
      },
      {
        "deprecated": false,
        "description": "Allows to create an user",
        "id": "CAN_CREATE_USER",
      },
      {
        "deprecated": false,
        "description": "Allows to reset the password of an user",
        "id": "CAN_RESET_USER_PASSWORD",
      },
      {
        "deprecated": false,
        "description": "Allows to get an user",
        "id": "CAN_GET_USER",
      },
      {
        "deprecated": false,
        "description": "Allows to get all users",
        "id": "CAN_GET_USERS",
      },
      {
        "deprecated": false,
        "description": "Allows to delete users",
        "id": "CAN_DELETE_USER",
      },
      {
        "deprecated": false,
        "description": "Allows to create an user role",
        "id": "CAN_CREATE_USER_ROLE",
      },
      {
        "deprecated": false,
        "description": "Allows to get an user role",
        "id": "CAN_GET_USER_ROLE",
      },
      {
        "deprecated": false,
        "description": "Allows to get all user roles",
        "id": "CAN_GET_USER_ROLES",
      },
      {
        "deprecated": false,
        "description": "Allows to delete user role",
        "id": "CAN_DELETE_USER_ROLE",
      },
      {
        "deprecated": false,
        "description": "Allows to get a permission",
        "id": "CAN_GET_PERMISSION",
      },
      {
        "deprecated": false,
        "description": "Allows to get all permissions",
        "id": "CAN_GET_PERMISSIONS",
      },
      {
        "deprecated": false,
        "description": "Allows to get all comments",
        "id": "CAN_GET_COMMENTS",
      },
      {
        "deprecated": false,
        "description": "Allows to update a comment",
        "id": "CAN_UPDATE_COMMENTS",
      },
      {
        "deprecated": false,
        "description": "Allows to delete comments",
        "id": "CAN_DELETE_COMMENTS",
      },
      {
        "deprecated": false,
        "description": "Allows to create a member plan",
        "id": "CAN_CREATE_MEMBER_PLAN",
      },
      {
        "deprecated": false,
        "description": "Allows to get a member plan",
        "id": "CAN_GET_MEMBER_PLAN",
      },
      {
        "deprecated": false,
        "description": "Allows to get all member plans",
        "id": "CAN_GET_MEMBER_PLANS",
      },
      {
        "deprecated": false,
        "description": "Allows to delete member plan",
        "id": "CAN_DELETE_MEMBER_PLAN",
      },
      {
        "deprecated": false,
        "description": "Allows to create a payment method",
        "id": "CAN_CREATE_PAYMENT_METHOD",
      },
      {
        "deprecated": false,
        "description": "Allows to get a payment method",
        "id": "CAN_GET_PAYMENT_METHOD",
      },
      {
        "deprecated": false,
        "description": "Allows to get all payment methods",
        "id": "CAN_GET_PAYMENT_METHODS",
      },
      {
        "deprecated": false,
        "description": "Allows to delete payment method",
        "id": "CAN_DELETE_PAYMENT_METHOD",
      },
      {
        "deprecated": false,
        "description": "Allows to create an invoice",
        "id": "CAN_CREATE_INVOICE",
      },
      {
        "deprecated": false,
        "description": "Allows to get an invoice",
        "id": "CAN_GET_INVOICE",
      },
      {
        "deprecated": false,
        "description": "Allows to get all invoices",
        "id": "CAN_GET_INVOICES",
      },
      {
        "deprecated": false,
        "description": "Allows to delete invoice",
        "id": "CAN_DELETE_INVOICE",
      },
      {
        "deprecated": false,
        "description": "Allows to create a payment",
        "id": "CAN_CREATE_PAYMENT",
      },
      {
        "deprecated": false,
        "description": "Allows to get an payment",
        "id": "CAN_GET_PAYMENT",
      },
      {
        "deprecated": false,
        "description": "Allows to get all payments",
        "id": "CAN_GET_PAYMENTS",
      },
      {
        "deprecated": false,
        "description": "Allows to get all payment providers",
        "id": "CAN_GET_PAYMENT_PROVIDERS",
      },
      {
        "deprecated": false,
        "description": "Allows to send a JWT Login",
        "id": "CAN_SEND_JWT_LOGIN",
      },
      {
        "deprecated": false,
        "description": "Allows to login editor",
        "id": "CAN_LOGIN_EDITOR",
      },
      {
        "deprecated": false,
        "description": "Allows to create a subscription",
        "id": "CAN_CREATE_SUBSCRIPTION",
      },
      {
        "deprecated": false,
        "description": "Allows to get a subscription",
        "id": "CAN_GET_SUBSCRIPTION",
      },
      {
        "deprecated": false,
        "description": "Allows to get all subscriptions",
        "id": "CAN_GET_SUBSCRIPTIONS",
      },
      {
        "deprecated": false,
        "description": "Allows to delete a subscription",
        "id": "CAN_DELETE_SUBSCRIPTION",
      },
      {
        "deprecated": false,
        "description": "Allows to login as other user",
        "id": "CAN_LOGIN_AS_OTHER_USER",
      },
      {
        "deprecated": false,
        "description": "Allows to get all settings",
        "id": "CAN_GET_SETTINGS",
      },
      {
        "deprecated": false,
        "description": "Allows to update settings",
        "id": "CAN_UPDATE_SETTINGS",
      },
      {
        "deprecated": false,
        "description": "Allows to get a comment rating system",
        "id": "CAN_GET_COMMENT_RATING_SYSTEM",
      },
      {
        "deprecated": false,
        "description": "Allows to create a comment rating system",
        "id": "CAN_CREATE_COMMENT_RATING_SYSTEM",
      },
      {
        "deprecated": false,
        "description": "Allows to update a comment rating system",
        "id": "CAN_UPDATE_COMMENT_RATING_SYSTEM",
      },
      {
        "deprecated": false,
        "description": "Allows to delete a comment rating system",
        "id": "CAN_DELETE_COMMENT_RATING_SYSTEM",
      },
      {
        "deprecated": false,
        "description": "Allows to create a tag",
        "id": "CAN_CREATE_TAG",
      },
      {
        "deprecated": false,
        "description": "Allows to update a tag",
        "id": "CAN_UPDATE_TAG",
      },
      {
        "deprecated": false,
        "description": "Allows to get all tags",
        "id": "CAN_GET_TAGS",
      },
      {
        "deprecated": false,
        "description": "Allows to delete a tag",
        "id": "CAN_DELETE_TAG",
      },
      {
        "deprecated": false,
        "description": "Allows to get a poll",
        "id": "CAN_GET_POLL",
      },
      {
        "deprecated": false,
        "description": "Allows to update a poll",
        "id": "CAN_UPDATE_POLL",
      },
      {
        "deprecated": false,
        "description": "Allows to delete a poll",
        "id": "CAN_DELETE_POLL",
      },
      {
        "deprecated": false,
        "description": "Allows to create a poll",
        "id": "CAN_CREATE_POLL",
      },
      {
        "deprecated": false,
        "description": "Allows to get an event",
        "id": "CAN_GET_EVENT",
      },
      {
        "deprecated": false,
        "description": "Allows to update an event",
        "id": "CAN_UPDATE_EVENT",
      },
      {
        "deprecated": false,
        "description": "Allows to delete an event",
        "id": "CAN_DELETE_EVENT",
      },
      {
        "deprecated": false,
        "description": "Allows to create an event",
        "id": "CAN_CREATE_EVENT",
      },
      {
        "deprecated": false,
        "description": "Allows to create a consent",
        "id": "CAN_CREATE_CONSENT",
      },
      {
        "deprecated": false,
        "description": "Allows to update a consent",
        "id": "CAN_UPDATE_CONSENT",
      },
      {
        "deprecated": false,
        "description": "Allows to delete a consent",
        "id": "CAN_DELETE_CONSENT",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;
